# oop_exercise_08

./: CMakeLists.txt  factory.hpp  figure.hpp  main.cpp  pentagon.hpp  pub_sub.hpp  report.doc  rhomb.hpp  test.txt  trapeze.hpp
